# erp-fsm

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 12f203c65d3c_create_product_materials_table.py  2214a3da90ae_add_quantity_on_hand_to_materials.py  4242c5c893c5_create_manufacturing_orders_table.py  50f427d684ae_create_stock_movements_table.py  60cdda453ad6_create_customers_table.py  6781d4495d5e_add_dimensions_to_products.py  6ebaa0c41fff_add_product_and_quantity_to_.py  b19eeac1979c_add_quantity_on_hand_to_materials.py  c3a0b56f77b4_add_unit_cost_to_materials.py  ff112f7e9e06_create_products_table.py
app/: config.py  db.py  main.py
app/models/: __init__.py  customer.py  manufacturing_order.py  material.py  product.py  product_material.py  stock_movement.py
app/routes/: __init__.py  customers.py  health.py  manufacturing_orders.py  materials.py  product_materials.py  products.py
app/schemas/: __init__.py  customer.py  manufacturing_order.py  material.py  material_availability.py  material_consumption.py  material_receipt.py  material_requirements.py  product.py  product_cost.py  product_material.py  stock_movement.py
app/services/: customer.py  manufacturing_order.py  material.py  product.py  product_material.py
erp-fsm-web/: index.html  package-lock.json  package.json
tests/: conftest.py  test_customers.py  test_health.py  test_manufacturing_orders.py  test_material.py  test_product_materials.py  test_products.py  test_stock_movements.py
(+19 files in other folders)
